# finance-assistance

./: .gitignore  README.md  app.py  daily_log.json  documents.pkl  main.py  packages.txt  portfolio.json  pyproject.toml  requirements.txt
agents/: analysis_agent.py  api_agent.py  llm_agent.py  retriever_agent.py  scraper_agent.py  voice_agent.py
orchestrator/: documents.pkl  graph.py  main.py
streamlit_app/: app.py  requirements.txt
