[project]
name = "finance-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.12",
    "feedparser>=6.0.11",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
    "soundfile>=0.13.1",
    "streamlit>=1.45.1",
    "uvicorn>=0.34.2",
    "yfinance>=0.2.61",
]
