[project]
name = "finance-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.12.4",
    "altair>=5.5.0",
    "python-dotenv>=1.0.0",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.12",
    "feedparser>=6.0.11",
    "langchain>=0.3.25",
    "langchain-google-genai>=2.1.5",
    "langgraph>=0.4.7",
    "openai>=1.82.0",
    "pandas>=2.2.3",
    "pyaudio>=0.2.14",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
    "soundfile>=0.13.1",
    "speechrecognition>=3.10.4",
    "streamlit>=1.45.1",
    "torch>=2.7.0",
    "uvicorn>=0.34.2",
    "yfinance>=0.2.61",
    "beautifulsoup4>=4.12.3"
]
